# AIrpcCluster

./: INSTALL-VASTAI.md  Makefile  README.md  VALIDATION.md
.emergent/: emergent.yml  summary.txt
.github/workflows/: build-android.yml  build-configurator.yml  build-linux.yml  build-macos.yml  build-windows.yml
android-worker/: README-android.md  build.gradle  settings.gradle
android-worker/app/: build.gradle
android-worker/app/src/main/: AndroidManifest.xml
android-worker/app/src/main/cpp/: CMakeLists.txt  rpc_server_wrapper.cpp
android-worker/app/src/main/res/drawable/: ic_notification.xml
android-worker/app/src/main/res/values/: colors.xml  strings.xml
configurator/: electron-builder.yml  main.js  package.json  preload.js
configurator/renderer/: index.html
configurator/shared/: discovery.js
installers/linux/: install.sh  rpc-cluster-beacon.service  rpc-cluster-rpcserver.service
installers/macos/: Distribution.xml  build-macos-installer.sh  license.txt  readme.html  welcome.html
installers/macos/launchd/: com.rpccluster.beacon.plist  com.rpccluster.rpcserver.plist
installers/macos/scripts/: postinstall  preinstall
installers/windows/: build-windows-installer.ps1  setup.iss
memory/: PRD.md
rpc-cluster-plugin/: manifest.json  package.json  tsconfig.json  vitest.config.ts
rpc-cluster-plugin/src/: config.ts  discovery.ts  generator.ts  index.ts  utils.ts
rpc-cluster-plugin/src/__tests__/: config.test.ts  discovery.test.ts  generator.test.ts  utils.test.ts
worker-beacon/: beacon.js  build.sh  package.json  sea-config.json
(+6 files in other folders)
